[tool.poetry]
name = "kings"
version = "0.1.0"
description = "A kings drinking game web app"
authors = ["Devon Peticolas <devon@peticol.as>"]

[tool.poetry.dependencies]
gunicorn = "^20.0.4"
python = "^3.7"
flask = "^1.1.2"
flask-socketio = "^4.3.0"
eventlet = "^0.25.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.3.1"
black = "^19.3b0"
mypy = "^0.700"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
